--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5433/spring-shop
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+server.error.path=/error
